// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpaceTreeNode /> snapshot checks divider dot position in compact mode 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      firstLine="firstLine"
      isCompact={true}
      nodeId="root"
      secondLine="testteam"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={32}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={32}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  firstLine="firstLine"
                  isCompact={true}
                  isDisabled={false}
                  secondLine="testteam"
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-row"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-row"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        >
                          firstLine
                        </p>
                      </Text>
                      <DividerDot
                        data-test="compact-mode-divider-dot"
                      >
                        <div
                          className="md-divider-dot-wrapper"
                        />
                      </DividerDot>
                      <Text
                        aria-label="testteam"
                        data-test="list-item-second-line"
                        style={
                          Object {
                            "color": "var(--mds-color-theme-text-teamdefault-normal)",
                          }
                        }
                        type="body-secondary"
                      >
                        <small
                          aria-label="testteam"
                          className="md-text-wrapper"
                          data-test="list-item-second-line"
                          data-type="body-secondary"
                          style={
                            Object {
                              "color": "var(--mds-color-theme-text-teamdefault-normal)",
                            }
                          }
                        >
                          <SecondLineElement
                            key="second-line-item-0"
                            showDividerDot={false}
                          >
                            testteam
                          </SecondLineElement>
                        </small>
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with action 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      action={
        <p>
          action
        </p>
      }
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  action={
                    <p>
                      action
                    </p>
                  }
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <p>
                        action
                      </p>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with className 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      className="example-class"
      nodeId="root"
    >
      <TreeNodeBase
        className="example-class md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="example-class md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with firstLine 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      firstLine="firstLine"
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  firstLine="firstLine"
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        >
                          firstLine
                        </p>
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with id 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      id="example-id"
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        id="example-id"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isAlert 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isAlert={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isAlert={true}
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-text-primary-normal)"
                        name="alert"
                        scale={14}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="alert"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-text-primary-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isAlertMuted 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isAlertMuted={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isAlertMuted={true}
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-text-primary-normal)"
                        name="alert-muted"
                        scale={14}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="alert-muted"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-text-primary-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isDisabled 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isDisabled={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={true}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={true}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isEnterRoom 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isEnterRoom={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isEnterRoom={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-control-active-normal)"
                        name="enter-room"
                        scale={14}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="enter-room"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-control-active-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isError 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isError={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isError={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-text-error-normal)"
                        name="priority-circle"
                        scale={14}
                        strokeColor="none"
                        weight="filled"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="priority-circle"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-text-error-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isMention 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isMention={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isMention={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-control-active-normal)"
                        name="mention"
                        scale={14}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="mention"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-control-active-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isNewActivity 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isNewActivity={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isNewActivity={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isSelected 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isSelected={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isSelected={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isSelected and draft 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isDraft={true}
      isSelected={false}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isDraft={true}
                  isSelected={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-text-primary-normal)"
                        name="draft-indicator"
                        scale={14}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="draft-indicator"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-text-primary-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with isUnread 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      isUnread={true}
      nodeId="root"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  isUnread={true}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column md-space-row-content-is-new-activity"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-control-active-normal)"
                        name="unread"
                        scale={14}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="unread"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-control-active-normal)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with multiple string secondLine 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      nodeId="root"
      secondLine={
        Array [
          "one",
          "two",
          "three",
        ]
      }
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  secondLine={
                    Array [
                      "one",
                      "two",
                      "three",
                    ]
                  }
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                      <Text
                        aria-label="one, two, three"
                        data-test="list-item-second-line"
                        style={
                          Object {
                            "color": "var(--mds-color-theme-text-teamdefault-normal)",
                          }
                        }
                        type="body-secondary"
                      >
                        <small
                          aria-label="one, two, three"
                          className="md-text-wrapper"
                          data-test="list-item-second-line"
                          data-type="body-secondary"
                          style={
                            Object {
                              "color": "var(--mds-color-theme-text-teamdefault-normal)",
                            }
                          }
                        >
                          <SecondLineElement
                            key="second-line-item-0"
                            showDividerDot={false}
                          >
                            one
                          </SecondLineElement>
                          <SecondLineElement
                            key="second-line-item-1"
                            showDividerDot={true}
                          >
                            <DividerDot
                              data-test="multiple-string-second-line-divider-dot"
                            >
                              <div
                                className="md-divider-dot-wrapper"
                              />
                            </DividerDot>
                            two
                          </SecondLineElement>
                          <SecondLineElement
                            key="second-line-item-2"
                            showDividerDot={true}
                          >
                            <DividerDot
                              data-test="multiple-string-second-line-divider-dot"
                            >
                              <div
                                className="md-divider-dot-wrapper"
                              />
                            </DividerDot>
                            three
                          </SecondLineElement>
                        </small>
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with secondLine 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      nodeId="root"
      secondLine="secondLine"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  secondLine="secondLine"
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                      <Text
                        aria-label="secondLine"
                        data-test="list-item-second-line"
                        style={
                          Object {
                            "color": "var(--mds-color-theme-text-teamdefault-normal)",
                          }
                        }
                        type="body-secondary"
                      >
                        <small
                          aria-label="secondLine"
                          className="md-text-wrapper"
                          data-test="list-item-second-line"
                          data-type="body-secondary"
                          style={
                            Object {
                              "color": "var(--mds-color-theme-text-teamdefault-normal)",
                            }
                          }
                        >
                          <SecondLineElement
                            key="second-line-item-0"
                            showDividerDot={false}
                          >
                            secondLine
                          </SecondLineElement>
                        </small>
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with style 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      nodeId="root"
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
        style={
          Object {
            "color": "pink",
          }
        }
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              style={
                Object {
                  "color": "pink",
                }
              }
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;

exports[`<SpaceTreeNode /> snapshot should match snapshot with teamColor 1`] = `
<Tree
  excludeTreeRoot={false}
  treeStructure={
    Object {
      "children": Array [],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  >
    <SpaceTreeNode
      nodeId="root"
      teamColor="cobalt"
    >
      <TreeNodeBase
        className="md-space-tree-node-wrapper"
        nodeId="root"
        shape="isPilled"
        size={50}
      >
        <FocusRing
          isInset={true}
        >
          <FocusRing
            focusClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            focusRingClass="md-focus-ring-wrapper isInset children md-focus-ring-inset"
            isInset={true}
          >
            <div
              aria-level={1}
              aria-posinset={1}
              aria-setsize={1}
              className="md-space-tree-node-wrapper md-tree-node-base-wrapper active-node"
              data-nodeid="root"
              data-padded={false}
              data-shape="isPilled"
              data-size={50}
              id="md-tree-node-root"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="treeitem"
              tabIndex={0}
            >
              <div
                className="md-tree-node-base-content"
                id="md-tree-node-root-content"
              >
                <SpaceRowContent
                  isCompact={false}
                  isDisabled={false}
                  teamColor="cobalt"
                >
                  <ListItemBaseSection
                    position="start"
                  >
                    <div
                      data-position="start"
                    />
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    className="md-space-row-content-text-wrapper text-column"
                    position="middle"
                  >
                    <div
                      className="md-space-row-content-text-wrapper text-column"
                      data-position="middle"
                    >
                      <Text
                        data-disabled={false}
                        data-test="list-item-first-line"
                        type="body-primary"
                      >
                        <p
                          className="md-text-wrapper"
                          data-disabled={false}
                          data-test="list-item-first-line"
                          data-type="body-primary"
                        />
                      </Text>
                    </div>
                  </ListItemBaseSection>
                  <ListItemBaseSection
                    position="end"
                  >
                    <div
                      data-position="end"
                    />
                  </ListItemBaseSection>
                </SpaceRowContent>
              </div>
            </div>
          </FocusRing>
        </FocusRing>
      </TreeNodeBase>
    </SpaceTreeNode>
  </div>
</Tree>
`;
